Scoped values complete